--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 *.pyc
+*.swp
+*.txt
+.ycm_extra_conf.py
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+*~
